--- a/home.css
+++ b/home.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background-color: #efe7e3;
+    background-color: #9bb7d4;
 }
 
 .frame {
@@ -31,14 +31,11 @@ ul{
 
 .site-name {
     margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
+    font-weight: 900;
     font-size: 30px;
-    color: lightcoral;
 }
 
 .nav-menu {
-    font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 16px;
 }
@@ -59,7 +56,7 @@ a:hover {
     margin-top: 100px;
 }
 
-.korean-lorem {font-family: 'Noto Sans KR', sans-serif;
+.introduce {font-family: 'Noto Sans KR', sans-serif;
     font-weight: 500;
     font-size: 50;
 }
@@ -92,23 +89,32 @@ a:hover {
     background-color: skyblue;
 }
 
-.english-lorem {
+.introduce2 {
     font-family: 'Noto Sans KR', sans-serif;
     font-weight: 400;
     font-size: 15px;
     font-style: italic;
     letter-spacing: -0.3px;
+    margin-top: 40px;
 }
 
 .recent-menu {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    font-weight: 700;
-    color: #c2b4ab;
-
-    display: inline;
     text-align: center;
-    margin-top: 100px;
+    font-size: 100px;
+}
+
+.recent-works {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    margin: 100px 100px;
+    text-align: center;
+}
+
+#work-picture {
+    width:400px;
+    margin-right: 120px;
 }
 
 .work-footer {
@@ -128,42 +134,15 @@ a:hover {
     margin-left: 30px;
 }
 
-.profile-section {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    margin: 100px 100px;
-}
-
-#profile-picture {
-    width:500px;
-    margin-right: 60px;
-}
-
-.introduction {
-    width: min-content;
-}
-
 .introduction>h2 {
-    margin: 0px;
-    font-family: 'Montserrat', sans-serif;
     font-size: 35px;
 }
 
 .introduction>p{
     font-family: 'Nato Sans KR', sans-serif;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 16px;
     margin-bottom: 40px;
-}
-
-#capability {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    font-size: 20px;
-    font-style: italic;
-    line-height: 50px;
 }
 
 .value-menu {
