--- a/news.css
+++ b/news.css
@@ -1,11 +1,13 @@
 html {
     font-family: 'Noto Sans KR', sans-serif;
+    max-width: 100%;
 }
 
 body {
     background-color: #a8a8a8;
     margin-left: 150px;
     margin-right: 150px;
+    
 }
 
 .header {
@@ -98,11 +100,22 @@ article {
 }
 
 #news2-img {
-    width: 100%;
-    height: 70%;
+    max-width: 100%;
+    max-height: 70%;
     mix-blend-mode: luminosity;
 }
 #news2-img:hover {
     mix-blend-mode: normal;
 }
 
+
+button {
+    float: right;
+    padding: 0.5rem 1rem;
+    background: none;
+    font-size: 100px;
+    text-align: center;  
+    width: auto;
+    border: none;
+    border-radius: 1000px;
+}
